[package]
name = "chia-node"
version = "0.3.0"
description = "An API wrapper for Chia node daemons"
license = "MIT"
repository = "https://gitlab.cronce.io/foss/chia-node-rs"
authors = ["Mike Cronce <mikequadra-tec.net>"]
edition = "2018"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
reqwest = {version = "0.10", default_features = false, features = ["json", "rustls-tls"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = {version = "1.9", features = ["chrono"]}
thiserror = "1"
tokio = {version = "0.2", features = ["fs"]}

