[package]
name = "chia_models"
version = "0.4.1"
description = "chia models without any logic"
license = "MIT"
repository = "https://github.com/mpwsh/chia-models"
authors = ["mpw <x@mpw.sh>"]
edition = "2021"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = {version = "1.9", features = ["chrono"]}
